fix(account): align mfa toggle on mobile

--- a/packages/account/src/pages/Security/MfaSection/index.module.scss
+++ b/packages/account/src/pages/Security/MfaSection/index.module.scss
@@ -160,14 +160,11 @@
   }
 
   .toggleRow {
-    flex-direction: column;
-    align-items: flex-start;
     gap: _.unit(3);
     padding: _.unit(4);
   }
 
   .toggleInfo {
-    width: 100%;
     gap: _.unit(1.5);
   }
 
